feat: Account初期セットアップを追加
